# oms-gateway

./: .gitignore  CMakeLists.txt  PROJECT_BUILD_STATUS.md  README.md  partitions.csv  sdkconfig.defaults
.kilocode/: mcp.json
.qwen/: settings.json
CAD/: HUB_ASSAMBLY.SLDASM  HUB_BACK.SLDPRT  HUB_BACK.STL  HUB_CASE_BASE.SLDPRT  HUB_CASE_BASE.STL
Debug/: log.csv
Dev-Log/: application_structure.md  build_environment_error.md  build_error_directory.md  build_fixes.md  build_process.md  cc1101_leitfaden_adaptation.md  cc1101_status_diagnostics.md  directory_structure_correction.md  initial_setup_issues.md  repository_cleanup_issue.md  web_ui_implementation_notes.md  web_ui_improvement_plan.md
Hub/: README.md  main.py  requirements.txt
Progress/: Implementation_Checklist.md  (+8 more)
main/: CMakeLists.txt  app_main.c  main.c  main.h  system_status.c  system_status.h
main/app/: config.h  config_defaults.h  http_server.c  http_server.h  led.c  led.h  runtime.c  runtime.h  services.c  services.h  storage.c  storage.h
main/app/net/: backend.c  backend.h  wifi.c  wifi.h
main/app/radio/: radio_config.c  radio_config.h
main/app/static/: app.js  index.html  style.css
main/app/wmbus/: frame_parse.c  frame_parse.h  packet_router.c  packet_router.h  parsed_frame.c  parsed_frame.h  whitelist.c  whitelist.h
main/cc1101/: cc1101.c  cc1101.h  cc1101_config.c  cc1101_driver.c
main/config/: CMakeLists.txt  config.h  config_manager.c  config_manager.h  http_handlers.c  web_ui.c
main/forwarder/: CMakeLists.txt  forwarder.c  forwarder.h
main/nvs_manager/: CMakeLists.txt  nvs_manager.c  nvs_manager.h
main/radio/: cc1101_hal.c  cc1101_hal.h  cc1101_regs.h  pins.h  radio_rx.c  radio_rx.h  rf_config_tmode.h
main/static/: backend.html  index.html  radio.html  whitelist.html  wifi.html
main/static/scripts/: main.js
main/static/styles/: main.css
main/web/: web_server.c  web_server.h
main/whitelist/: CMakeLists.txt  whitelist.c  whitelist.h  whitelist_manager.c
main/wmbus/: 3of6.c  crc16.c  crc16.h  device_types.h  encoding_3of6.c  encoding_3of6.h  packet.c  packet.h  pipeline.c  pipeline.h  rx.c  rx.h  three_of_six.c  wmbus.h  wmbus_protocol.c  wmbus_receiver.c  wmbus_receiver.h
(+43 files in other folders)
