idf_component_register(
    SRCS
        "main.c"
        "radio/cc1101_hal.c"
        "radio/radio_rx.c"
        "wmbus/crc16.c"
        "wmbus/encoding_3of6.c"
        "wmbus/packet.c"
        "wmbus/pipeline.c"
    INCLUDE_DIRS
        "."
        "radio"
        "wmbus"
    REQUIRES
        driver
        nvs_flash
        esp_timer
)
